--- a/responsive.css
+++ b/responsive.css
@@ -46,3 +46,10 @@
     padding: 0px;
   }
   }
+ @media only screen and (max-width: 350px){
+    .secondHalf img{
+      display: none;
+    }
+  
+  
+  }
