--- a/responsive.css
+++ b/responsive.css
@@ -34,10 +34,11 @@
   }
   .text-big{
     text-align: center;
+      font-size:33px;
   }
   .text-small{
     text-align: center;
-  
+  font-size:18px;
   }
   .buttons{
     text-align: center;
@@ -89,9 +90,11 @@
   }
   .text-big{
     text-align: center;
+      font-size:30px;
   }
   .text-small{
     text-align: center;
+      font-size:16px;
   
   }
   .buttons{
